--- a/public/justforyouStyle.css
+++ b/public/justforyouStyle.css
@@ -441,4 +441,6 @@ p {
   margin-top: 100px !important;
 }
 
-
+#feetStink {
+ background-image:  "https://ultrahydrophobiccoating.com/wp-content/uploads/2016/08/img4-wtoutiao-com111.gif";
+}
